# Bulls-And-Cows

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
include/: cuda_utils.cuh  player.hpp  utils.hpp
src/: cuda_utils.cu  main.cpp  player.cpp  utils.cpp
